tests/ui/frontmatter/fence-unclosed-4.rs
----cargo
//~^ ERROR: unclosed frontmatter

//! Similarly, a module-level content should allow for recovery as well (as
//! per unclosed-1.rs)

fn main() {}
